--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -49,6 +49,10 @@ input, button {
 	margin-top: 150px;
 }
 
+.firstContainer {
+	margin-top: 50px;
+}
+
 h1 {
 	font-weight: 100;
 	font-size: 40px;
