--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -1,4 +1,4 @@
-@CHARSET "UTF-8";
+
 
 html {
 	font-size: 1em;
@@ -27,6 +27,43 @@ body {
     -webkit-text-rendering: optimizeLegibility;
     -moz-text-rendering: optimizeLegibility;
     -moz-osx-font-smoothing: grayscale;	
+}
+
+/* General */
+.textpadding {
+	padding: 20px;
+}
+
+.noblock {
+	display: inline;
+}
+
+.inputmargin-50 {
+	margin-left:50px;
+}
+.inputmargin-20 {
+	margin-left:20px;
+}
+.inputmargin-10 {
+	margin-left:10px;
+}
+.inputmarginbottom-15 {
+	margin-bottom:15px;
+}
+
+.txt-pd-l-20 {
+	padding-left: 20px;
+}
+
+
+.pd-l-50 {
+	padding-left: 50px;
+}
+
+
+
+select {
+	border:none;
 }
 
 /* NAVBAR */
@@ -108,9 +145,7 @@ input, button {
 }
 
 /* STARTSEITE*/
-.textpadding {
-	padding: 20px;
-}
+
 .h1padding {
 	padding-left: 20px;
 }
@@ -175,6 +210,28 @@ input, #button {
 	margin-left: 20px;
 }
 
+/* Film erstellen*/
+
+.beschreibunginput {
+	    width: 90%;
+    height: 150px;
+}
+
+#film-img {
+	    width: 50%;
+    border: 1px solid grey;
+    background-color: lightgrey;
+    height: 250px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#uploadFotoButton {
+	    margin: auto;
+    margin-bottom: 48px;
+	
+}
 
 /* Preoloader */
 
@@ -209,5 +266,11 @@ input, #button {
     letter-spacing: 10px;
 }
 
-
+@media only screen and (max-width: 768px) {
+	
+	.inputpd-80-768 {
+	padding-left:80px;
+}
+}
+}
 
