--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -38,6 +38,10 @@ body {
 	display: inline;
 }
 
+.maTop100 {
+	margin-top: 100px;
+}
+
 .inputmargin-50 {
 	margin-left:50px;
 }
@@ -58,6 +62,10 @@ body {
 
 .pd-l-50 {
 	padding-left: 50px;
+}
+
+.dpnone {
+	display: none;
 }
 
 
@@ -191,6 +199,8 @@ button:focus, input:focus {
 #ergebnisse {
 	display: flex;
 }
+
+
 
 input, #button {
 	display: block;
