--- a/src/main/webapp/templates/commom-template.xhtml
+++ b/src/main/webapp/templates/commom-template.xhtml
@@ -47,12 +47,11 @@
 							<div class="col-sm-3 col-md-3 pull-right">
 								<h:form class="navbar-form" role="search">
 									<div class="input-group">
-										<h:inputText type="text" class="form-control" placeholder="Search"
+										<h:inputText type="text" binding="#{searchWord}" class="form-control" placeholder="Search"
 										name="srch-term" id="srch-term"></h:inputText>
 										<div class="input-group-btn">
-											<button class="btn btn-default" type="submit">
-												<i class="glyphicon glyphicon-search"></i>
-											</button>
+											<h:commandButton class="btn btn-default" type="submit" action="#{filmController.filmSuchen(searchWord.value)}">
+											</h:commandButton>
 										</div>
 									</div>
 								</h:form>
