--- a/src/main/webapp/templates/commom-template.xhtml
+++ b/src/main/webapp/templates/commom-template.xhtml
@@ -50,7 +50,7 @@
 										<h:inputText type="text" binding="#{searchWord}" class="form-control" placeholder="Search"
 										name="srch-term" id="srch-term"></h:inputText>
 										<div class="input-group-btn">
-											<h:commandButton class="btn btn-default" type="submit" action="#{filmController.filmSuchen(searchWord.value)}">
+											<h:commandButton class="btn btn-default" type="submit" action="#{filmController.filmSuchen(searchWord.value)}" value="Suche">
 											</h:commandButton>
 										</div>
 									</div>
