upload button zentriert

--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -241,7 +241,7 @@ input, #button {
     margin-bottom: 50px;
 }
 
-#uploadFotoButton {
+#uploadFotoButton, .uploadFotoButtonClass {
 	    margin: auto;
     margin-bottom: 48px;
 	
