--- a/src/main/webapp/templates/commom-template.xhtml
+++ b/src/main/webapp/templates/commom-template.xhtml
@@ -38,11 +38,11 @@
 					<div id="navbar" class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">	
 							<li><h:link outcome="index">Home<span id="index-nav" class="glyphicon glyphicon-index"></span></h:link></li>
-          					<li><h:link outcome="login">Login<span id="login-nav" class="glyphicon glyphicon-log-in glyphicon-nav-pos"></span></h:link></li>
+          					<li><h:link outcome="login" rendered="#{BenutzerController.loggedIn}" action="#{BenutzerController.logOut}" >Logout<span id="logout-nav" class="glyphicon glyphicon-log-out glyphicon-nav-pos"></span></h:link></li>
+            				<li><h:link outcome="login" rendered="#{!BenutzerController.loggedIn}">Login<span id="login-nav" class="glyphicon glyphicon-log-in glyphicon-nav-pos"></span></h:link></li>
             				<li><h:link outcome="filmformular">Film erstellen<span id="film-nav" class="glyphicon glyphicon-film glyphicon-nav-pos"></span></h:link></li>
-            				<li><h:link outcome="benutzerVerwalten">Profil verwalten<span id="profil-nav" class="glyphicon glyphicon-profil"></span></h:link></li>
-							<li><a href="#about">Über uns</a></li>
-							<li><a href="#contact">Kontakt</a></li>
+            				<li><h:link outcome="benutzerVerwalten">Profil verwalten<span id="profil-nav" class="glyphicon glyphicon-user"></span></h:link></li>
+							<li><h:link outcome="kontakt">Kontakt<span id="kontakt-nav" class="glyphicon glyphicon-envelope glyphicon-nav-pos"></span></h:link></li>
 						</ul>
 							<div class="col-sm-3 col-md-3 pull-right">
 								<h:form class="navbar-form" role="search">
@@ -52,6 +52,7 @@
 										<div class="input-group-btn">
 											<h:commandButton class="btn btn-default" type="submit" action="#{filmController.filmSuchen(searchWord.value)}" value="Suche">
 											</h:commandButton>
+												
 										</div>
 									</div>
 								</h:form>
@@ -60,7 +61,9 @@
 						<!--/.nav-collapse -->
 					</div>
 				</nav>
-				</div>			
+				</div>	
+				
+	
 
 			</ui:insert>
 	</div>
