--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -30,6 +30,16 @@ body {
 }
 
 /* General */
+
+.responsive {
+width:100%;
+height:auto;
+display:block;
+}
+.w250 {
+	width: 250px;
+}
+
 .textpadding {
 	padding: 20px;
 }
@@ -59,9 +69,39 @@ body {
 	padding-left: 20px;
 }
 
+.mg-l-70{
+	margin-left: 70px;
+}
 
 .pd-l-50 {
 	padding-left: 50px;
+}
+.pd-l-30 {
+	padding-left: 30px;
+}
+.pd-t-50 {
+	padding-top: 50px;
+}
+.pd-t-20 {
+	padding-top: 20px;
+}
+.pd-t-30 {
+	padding-top: 30px;
+}
+.font-100 {
+	font-size: 100px;
+}
+.font-70 {
+	font-size: 70px;
+}
+.font-50 {
+	font-size: 50px;
+}
+.font-40 {
+	font-size: 40px;
+}
+.font-30 {
+	font-size: 30px;
 }
 
 .dpnone {
@@ -70,6 +110,10 @@ body {
 
 th,tr,td {
 	padding: 5px;
+	padding-left: 50px;
+}
+th:first-child, tr:first-child,td:first-child {
+	padding-left: 0;
 }
 
 
