--- a/src/main/webapp/templates/commom-template.xhtml
+++ b/src/main/webapp/templates/commom-template.xhtml
@@ -37,13 +37,14 @@
 						</div>
 					<div id="navbar" class="collapse navbar-collapse">
 						<h:form>
-						<ul class="nav navbar-nav">	
-							<li><h:link outcome="index">Home<span id="index-nav" class="glyphicon glyphicon-index"></span></h:link></li>
-          					<li><h:link outcome="login" rendered="#{BenutzerController.loggedIn}" action="#{BenutzerController.logOut}" >Logout<span id="logout-nav" class="glyphicon glyphicon-log-out glyphicon-nav-pos"></span></h:link></li>
+						<ul class="nav navbar-nav">					
             				<li><h:link outcome="login" rendered="#{!BenutzerController.loggedIn}">Login<span id="login-nav" class="glyphicon glyphicon-log-in glyphicon-nav-pos"></span></h:link></li>
-            				<li><h:link outcome="filmformular">Film erstellen<span id="film-nav" class="glyphicon glyphicon-film glyphicon-nav-pos"></span></h:link></li>
+							<li><h:commandLink class="c-white" outcome="login" rendered="#{BenutzerController.loggedIn}" action="#{BenutzerController.logOut}" >Logout<span id="logout-nav" class="glyphicon glyphicon-log-out glyphicon-nav-pos"></span></h:commandLink></li>
+							<li><h:link class="c-white" outcome="benutzerVerwalten" rendered="#{BenutzerController.loggedIn}">Profil verwalten<span id="profil-nav" class="glyphicon glyphicon-user glyphicon-nav-pos"></span></h:link></li>
+							<li><h:link class="c-white" outcome="filmformular" rendered="#{BenutzerController.loggedIn}">Film erstellen<span class="glyphicon glyphicon-cloud-upload glyphicon-nav-pos"></span><span id="film-nav" class="glyphicon glyphicon-film glyphicon-nav-pos"></span></h:link></li>
+<!-- 							<li><h:link outcome="index">Home<span id="index-nav" class="glyphicon glyphicon-index"></span></h:link></li> -->
             				<li><h:commandLink action="#{filmController.alleFilme}">Filme<span id="film-nav" class="glyphicon glyphicon-film glyphicon-nav-pos"></span></h:commandLink></li>
-            				<li><h:link outcome="benutzerVerwalten">Profil verwalten<span id="profil-nav" class="glyphicon glyphicon-user glyphicon-nav-pos"></span></h:link></li>
+
 							<li><h:link outcome="kontakt">Kontakt<span id="kontakt-nav" class="glyphicon glyphicon-envelope glyphicon-nav-pos"></span></h:link></li>
 							<li><a href="#about">Über uns</a></li>
 						</ul>
