--- a/src/main/webapp/templates/commom-template.xhtml
+++ b/src/main/webapp/templates/commom-template.xhtml
@@ -46,7 +46,8 @@
             				<li><h:commandLink action="#{filmController.alleFilme}">Filme<span id="film-nav" class="glyphicon glyphicon-film glyphicon-nav-pos"></span></h:commandLink></li>
 
 							<li><h:link outcome="kontakt">Kontakt<span id="kontakt-nav" class="glyphicon glyphicon-envelope glyphicon-nav-pos"></span></h:link></li>
-							<li><a href="#about">Über uns</a></li>
+							<li><h:link outcome="ueberUns">Über Uns</h:link></li>
+
 						</ul>
 						</h:form>
 							<div class="col-sm-3 col-md-3 pull-right">
