--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -83,6 +83,10 @@ display:block;
 	margin-left: 70px;
 }
 
+.mg-t-20{
+	margin-top: 20px;
+}
+
 .mg-t-b-20 {
 	margin: 20px 0;
 }
@@ -418,6 +422,12 @@ input, #button {
 .glyph-top-4 {
 	top: 4px;
 }
+
+.voteStars td {
+	padding-left: 5px;
+}
+
+
 
 /* RESPONSIVE */
 @media only screen and (max-width: 768px) {
