--- a/src/main/webapp/templates/commom-template.xhtml
+++ b/src/main/webapp/templates/commom-template.xhtml
@@ -10,6 +10,23 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet"></link>
     <link rel="stylesheet" href="assets/css/main.css"></link>
     <link href='https://fonts.googleapis.com/css?family=Jura:400,300' rel='stylesheet' type='text/css'></link>
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png"></link>
+	<link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png"></link>
+	<link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png"></link>
+	<link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png"></link>
+	<link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png"></link>
+	<link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png"></link>
+	<link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png"></link>
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png"></link>
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png"></link>
+	<link rel="icon" type="image/png" sizes="192x192"  href="assets/favicon/android-icon-192x192.png"></link>
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png"></link>
+	<link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png"></link>
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png"></link>
+	<link rel="manifest" href="/manifest.json"></link>
+	<meta name="msapplication-TileColor" content="#ffffff"></meta>
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png"></meta>
+	<meta name="theme-color" content="#ffffff"></meta>
     <title>
     	<ui:insert name ="title">movieDatabase</ui:insert>
     </title>
