--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -167,9 +167,15 @@ th:first-child, tr:first-child,td:first-child {
 .c-white {
 	color: #ffffff !important;
 }
-
+.navcolor {
+	background-color: #101010;
+}
 .c-white:hover {
 	color: #9d9d9d !important;
+}
+
+.c-blue {
+	color: #337ab7;
 }
 
 select {
@@ -179,6 +185,10 @@ select {
 /* NAVBAR */
 .navbar-brand {
 	font-size:24px;
+}
+
+#admin-nav{
+	color: #337ab7;
 }
 
 .glyphicon-nav-pos {
@@ -454,42 +464,6 @@ footer {
 
 
 
-@media (max-width: 1300px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-left,.navbar-right {
-        float: none !important;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin-top: 7.5px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in{
-        display:block !important;
-    }
-}
 
 @media only screen and (max-width: 768px) {
 	
