--- a/src/main/webapp/templates/commom-template.xhtml
+++ b/src/main/webapp/templates/commom-template.xhtml
@@ -127,6 +127,7 @@
 
 									</ul></li>
 							</h:panelGroup>
+							            				<li><h:commandLink action="#{filmController.alleFilme}">Filme<span id="film-nav" class="glyphicon glyphicon-film glyphicon-nav-pos"></span></h:commandLink></li>
 							<li><h:link outcome="kontakt">Kontakt<span
 										id="kontakt-nav"
 										class="glyphicon glyphicon-envelope glyphicon-nav-pos"></span>
