admin direkt abgefangen

--- a/src/main/webapp/templates/commom-template.xhtml
+++ b/src/main/webapp/templates/commom-template.xhtml
@@ -88,7 +88,7 @@
 										class="glyphicon glyphicon-log-out glyphicon-nav-pos"></span>
 								</h:commandLink></li>
 															<li><h:link outcome="adminBereich"
-									rendered="#{BenutzerController.admin}">Admin<span
+									rendered="#{BenutzerController.benutzer.rechte == 'ADMIN'}">Admin<span
 										id="admin-nav"
 										class="glyphicon glyphicon-wrench glyphicon-nav-pos c-blue"></span>
 								</h:link></li>
