Nutzerbereich Fehler entfernt

--- a/src/main/webapp/templates/commom-template.xhtml
+++ b/src/main/webapp/templates/commom-template.xhtml
@@ -104,7 +104,7 @@
 
 									<ul class="dropdown-menu navcolor">
 										<li class="dropdown-header">Profil</li>
-										<li><h:commandLink class="c-white" action="#{navigationController.toBenutzerVerwalten}"
+										<li><h:commandLink class="c-white" action="#{BenutzerController.profilVerwaltungVorbereiten}"
 												rendered="#{BenutzerController.loggedIn}">Profil verwalten<span
 													id="profil-nav"
 													class="glyphicon glyphicon-user glyphicon-nav-pos"></span>
