--- a/src/main/webapp/templates/commom-template.xhtml
+++ b/src/main/webapp/templates/commom-template.xhtml
@@ -48,7 +48,8 @@
 </h:head>
 <div id="preloader">
 	<div id="status">
-		<h:graphicImage value="assets/img/preloader.gif" />
+	<h:graphicImage value="/assets/img/preloader.gif" />
+		<h:graphicImage value="../assets/img/preloader.gif" />
 	</div>
 	<h1 id="load">
 		<strong>movie</strong>Database
