--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -38,7 +38,7 @@ display:block;
 }
 
 .titellink{
-	color: #000000 !important;
+	color: #337ab7 !important;
 	text-decoration: none;
 }
 .titellink:hover {
